# safety

./: README.md  pyproject.toml
contracts/: SealAuthority.sol
examples/: basic_usage.py
safety/: __init__.py  cloak.py  padding.py  seal.py  shamir.py  shuffle.py  tokens.py  vault.py
safety/connectors/: __init__.py  arweave.py  base.py  bitcoin.py  ethereum.py  filecoin.py  self_hosted.py  solana.py
tests/: test_connectors.py  test_integration.py  test_shamir.py
