[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "safety-cloak"
version = "0.3.0"
description = "Client-side encryption and request anonymization for private data stores"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "AI Pantheon", email = "open-source@ai-pantheon.ai"},
]
keywords = ["encryption", "privacy", "anonymization", "aes-256-gcm", "envelope-encryption"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://ai-pantheon.ai"
Repository = "https://github.com/ai-pantheon/safety"
Issues = "https://github.com/ai-pantheon/safety/issues"

[tool.setuptools.packages.find]
include = ["safety*"]
